# MCP

./: .gitignore  Dockerfile  README.md  client.py  database.db  docker-compose.yml  main.py  menu.xlsx  prueba1.xlsx  pyproject.toml  requirements.txt  server.py  smithery.yaml  start.sh  thread.json
management/: menu.csv
mcp_tools/: __init__.py  archivo_notas.py  mcp_tools.py
src/: main.py  printer.py
src/my_server/: main.py
src/my_server/mcp_tools/: __init__.py  db_utils.py  menu.py  sql.py
