[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "my-server"
version = "0.1.0"
description = "My MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "fastmcp",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.22.0",
    "uv",
    "pandas>=2.0.0"
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.smithery]
server = "my_server.main:create_server"
